certficates overflow problem solved and scrollbar removed

--- a/css/index.scss
+++ b/css/index.scss
@@ -632,10 +632,10 @@ html {
                       height: 100%;
                       width: 100%;
                       figure {
-                        height: 100%;
+                        //height: 100%;
                         width: 100%;
                         img {
-                          aspect-ratio: 16/9;
+                          aspect-ratio: 16/10;
                           width: 100%;
                           object-position: top;
                           object-fit: cover;
